examples/type_system/failing/106_let_annotation_int_string.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/106_let_annotation_int_string.flx
// error[E300]: Annotation Type Mismatch
//
// The value of `x` does not match its type annotation.
//
//   examples/type_system/failing/106_let_annotation_int_string.flx:28:18
//    |
// 28 |     let x: Int = "hello"
//    |                  ^^^^^^^
//    |                  ------- this value has type `String`
//
//    |            --- but `x` was annotated as `Int`
//
// Note:
//   annotated type: Int
//   value type: String
//
// Help:
//   Change `x` to a `Int` value or update the annotation.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn main() -> Unit {
    let x: Int = "hello"
}
